# airlock

./: .dockerignore  .env.example  .gitignore  ADOPTERS.md  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GETTING_STARTED.md  GOVERNANCE.md  LICENSE  LICENSE-BSL  LICENSE-CC-BY-4.0  LLM_HANDOFF.md  MAINTAINERS.md  README.md  RELEASING.md  ROADMAP.md  ROLL_OUT_STATUS.md  SECURITY.md  SECURITY_AUDIT.md  WORK_SUMMARY.md  demo_trust_flow.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  license-check.yml  publish-ghcr.yml  publish-npm.yml  publish-pypi.yml  sbom.yml  trivy.yml
airlock/: __init__.py  cli.py  client.py  config.py  pow.py  trust_jwt.py
airlock/a2a/: __init__.py  adapter.py
airlock/audit/: __init__.py  trail.py
airlock/compliance/: __init__.py  bias_detector.py  evidence_pack.py  free_ai_mapper.py  incident.py  inventory.py  regulatory_mapper.py  report_generator.py  risk_classifier.py  schemas.py
airlock/crypto/: __init__.py  keys.py  signing.py  vc.py
airlock/engine/: __init__.py  event_bus.py  orchestrator.py  state.py
airlock/gateway/: __init__.py  a2a_routes.py  admin_routes.py  app.py  auth.py  compliance_routes.py  crl.py  crl_freshness.py  error_handlers.py  handlers.py  handshake_precheck.py  identity.py  logging_config.py  metrics.py  oauth_routes.py  observability.py  passport_routes.py  policy.py  rate_limit.py  replay.py  revocation.py  routes.py  startup_validate.py  url_validator.py  ws.py
airlock/integrations/: __init__.py  anthropic_sdk.py  langchain.py  openai_agents.py
airlock/oauth/: __init__.py  dependencies.py  discovery.py  introspection.py  models.py  registration.py  scopes.py  server.py  store.py  token_generator.py  token_validator.py
airlock/oauth/grants/: client_credentials.py  token_exchange.py
airlock/passport/: __init__.py  assertions.py  base.py  delegation.py  directory.py  httpx_auth.py  registration.py  replay.py  signer.py  verifier.py
airlock/registry/: __init__.py  agent_store.py  remote.py
airlock/reputation/: __init__.py  scoring.py  store.py
airlock/rotation/: __init__.py  chain.py  precommit.py  precommit_store.py  redis_chain.py  redis_precommit.py
airlock/schemas/: __init__.py  challenge.py  crl.py  envelope.py  events.py  handshake.py  identity.py  passport.py  reputation.py  requests.py  rotation.py  session.py  trust_tier.py  verdict.py
airlock/sdk/: __init__.py  client.py  middleware.py  simple.py  wall.py
airlock/semantic/: __init__.py  challenge.py  fingerprint.py  rule_evaluator.py
demo/: agent_a2a.py  agent_legitimate.py  agent_suspicious.py  docker-compose.demo.yml  run_demo.py
demo/agent_a/: Dockerfile  app.py
demo/agent_b/: Dockerfile  app.py
docs/: CNAME  OPEN_SOURCE_PROCESS.md  PROTOCOL_SPEC.md  app.js  auth.md  draft-airlock-agent-trust-00.md  federation-audit-v03.md  hero.js  index.html  llms.txt  monitoring.md  reveal.js  robots.txt  sitemap.xml  theme.js
docs/.well-known/: api-catalog
docs/access/: index.html
docs/adr/: 001-ed25519-signing.md  002-five-phase-pipeline.md  003-trust-scoring-model.md  004-lancedb-reputation-store.md  005-langgraph-orchestrator.md  README.md
docs/blog/: index.html  india-agent-payments-trust-gap.html  who-verifies-the-agents.html
docs/deploy/: docker.md  internal.md
docs/ietf/: draft-singh-webbotauth-hosted-directories-00.txt  draft-singh-webbotauth-hosted-directories-00.xml
docs/payments/: index.html
docs/protocol/: index.html
docs/registry/: index.html
docs/security/: CRL_AUDIT.md  FORMAL_SPEC_AUDIT.md  KEY_ROTATION_AUDIT.md  SECURITY_CONSIDERATIONS.md
examples/: agent_a2a.py  agent_hollow.py  agent_legitimate.py  agent_suspicious.py  passport_demo.py  run_demo.py
integrations/airlock-mcp/: README.md  package.json  tsconfig.json
integrations/airlock-mcp/src/: index.ts
sdks/typescript/: README.md  package.json  tsconfig.json
sdks/typescript/src/: client.ts  index.ts  types.ts
tests/: test_a2a.py  test_a2a_gateway.py  test_admin_api.py  test_attestation_signing.py  test_audit.py  test_canonical_json.py  test_chain_migration.py  test_chain_store_persistence.py  test_compliance_inventory.py  test_compliance_reports.py  test_crl.py  test_crypto.py  test_decay_on_read.py  test_delegation.py  test_delegation_chains.py  test_did_rate_limit.py  test_domain_metrics.py  test_dual_llm.py  test_dual_mode_auth.py  test_engine.py  test_error_shape.py  test_event_bus_try_publish.py  test_evidence_pack.py  test_fingerprint.py  test_gateway.py  test_input_validation.py  test_integration_v02.py  test_integrations.py  test_key_rotation.py  test_litellm_optional.py  test_oauth_grants.py  test_oauth_introspection.py  test_oauth_server.py  test_observability.py  test_passport.py  test_passport_assertions.py  test_passport_cli.py  test_passport_delegation.py  test_passport_gateway.py  test_passport_replay.py  (+38 more)
